wip: added all gallery pics

--- a/works.html
+++ b/works.html
@@ -43,7 +43,7 @@
 
     <!-- CANADIAN VILLAGE  -->
     <section class="gallery canagosadada">
-      <div class="galleryImageCan">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can1.jpg" loading="lazy" alt="canada village" />
       </div>
       <div class="galleryImageCan galleryImage">
@@ -77,7 +77,7 @@
 
     <!-- GONENYCHI  -->
     <section class="gallery gorenychi">
-      <div class="galleryImageGor">
+      <div class="galleryImageGor galleryImage">
         <img src="photo/gor/gor1.jpg" loading="lazy" alt="gorenychi" />
       </div>
       <div class="galleryImageGor galleryImage">
@@ -105,7 +105,7 @@
 
     <!-- GOSTOMEL  -->
     <section class="gallery gostomel">
-      <div class="galleryImageGos">
+      <div class="galleryImageGos galleryImage">
         <img src="photo/gos/gos1.jpg" loading="lazy" alt="gostomel" />
       </div>
       <div class="galleryImageGos galleryImage">
@@ -148,7 +148,7 @@
 
     <!-- GROBOVYCHI  -->
     <section class="gallery grobovychi">
-      <div class="galleryImageGro">
+      <div class="galleryImageGro galleryImage">
         <img src="photo/gro/gro1.jpg" loading="lazy" alt="grobovychi" />
       </div>
       <div class="galleryImageGro galleryImage">
@@ -197,7 +197,7 @@
 
     <!-- HOTYANIVKA  -->
     <section class="gallery hotyanivka">
-      <div class="galleryImageHot">
+      <div class="galleryImageHot galleryImage">
         <img src="photo/hot/hot1.jpg" loading="lazy" alt="hotyanivka" />
       </div>
       <div class="galleryImageHot galleryImage">
@@ -236,17 +236,11 @@
       <div class="galleryImageHot galleryImage">
         <img src="photo/hot/hot13.jpg" loading="lazy" alt="hotyanivka" />
       </div>
-      <div class="galleryImageHot galleryImage">
-        <img src="photo/hot/hot14.jpg" loading="lazy" alt="hotyanivka" />
-      </div>
-      <div class="galleryImageHot galleryImage">
-        <img src="photo/hot/hot15.jpg" loading="lazy" alt="hotyanivka" />
-      </div>
     </section>
 
     <!-- IRPIN  -->
     <section class="gallery irpin">
-      <div class="galleryImageIrp">
+      <div class="galleryImageIrp galleryImage">
         <img src="photo/irp/irp1.jpg" loading="lazy" alt="irpin" />
       </div>
       <div class="galleryImageIrp galleryImage">
@@ -280,26 +274,26 @@
 
     <!-- IVANKOVICHI  -->
     <section class="gallery ivankovichi">
-      <div class="galleryImageIva">
-        <img src="photo/iva/iva1.jpg" loading="lazy" alt="ivankovichi" />
+      <div class="galleryImageIva galleryImage">
+        <img src="photo/ivan/ivan1.jpg" loading="lazy" alt="ivankovichi" />
       </div>
       <div class="galleryImageIva galleryImage">
-        <img src="photo/iva/iva2.jpg" loading="lazy" alt="ivankovichi" />
+        <img src="photo/ivan/ivan2.jpg" loading="lazy" alt="ivankovichi" />
       </div>
       <div class="galleryImageIva galleryImage">
-        <img src="photo/iva/iva3.jpg" loading="lazy" alt="ivankovichi" />
+        <img src="photo/ivan/ivan3.jpg" loading="lazy" alt="ivankovichi" />
       </div>
       <div class="galleryImageIva galleryImage">
-        <img src="photo/iva/iva4.jpg" loading="lazy" alt="ivankovichi" />
+        <img src="photo/ivan/ivan4.jpg" loading="lazy" alt="ivankovichi" />
       </div>
       <div class="galleryImageIva galleryImage">
-        <img src="photo/iva/iva5.jpg" loading="lazy" alt="ivankovichi" />
+        <img src="photo/ivan/ivan5.jpg" loading="lazy" alt="ivankovichi" />
       </div>
     </section>
 
     <!-- KRUKOVSHYNA  -->
     <section class="gallery krukovshyna">
-      <div class="galleryImageKru">
+      <div class="galleryImageKru galleryImage">
         <img src="photo/kru/kru1.jpg" loading="lazy" alt="krukovshyna" />
       </div>
       <div class="galleryImageKru galleryImage">
@@ -330,7 +324,7 @@
 
     <!-- NETHERLANDS  -->
     <section class="gallery netherlands">
-      <div class="galleryImageNl">
+      <div class="galleryImageNl galleryImage">
         <img src="photo/nl/nl1.jpg" loading="lazy" alt="netherlands" />
       </div>
       <div class="galleryImageNl galleryImage">
@@ -349,7 +343,7 @@
 
     <!-- OBUHIV  -->
     <section class="gallery obuhiv">
-      <div class="galleryImageObh">
+      <div class="galleryImageObh galleryImage">
         <img src="photo/obh/obh1.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
@@ -371,7 +365,7 @@
         <img src="photo/obh/obh7.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
-        <img src="photo/obh/obh8.jpg" loading="lazy" alt="gorenychi" />
+        <img src="photo/obh/obh8.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
         <img src="photo/obh/obh9.jpg" loading="lazy" alt="obuhiv" />
@@ -386,9 +380,10 @@
         <img src="photo/obh/obh12.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
-        <img src="photo/obh/obh13.jpg" loading="lazy" alt="gorenychi" />
+        <img src="photo/obh/obh13.jpg" loading="lazy" alt="obuhiv" />
       </div>
-        <img src="photo/obh/obh14.jpg" loading="lazy" alt="obuhiv" />
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh14.jpg " loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
         <img src="photo/obh/obh15.jpg" loading="lazy" alt="obuhiv" />
@@ -409,7 +404,7 @@
         <img src="photo/obh/obh20.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
-        <img src="photo/obh/obh21.jpg" loading="lazy" alt="gorenychi" />
+        <img src="photo/obh/obh21.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
         <img src="photo/obh/obh22.jpg" loading="lazy" alt="obuhiv" />
@@ -424,7 +419,7 @@
         <img src="photo/obh/obh25.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
-        <img src="photo/obh/obh26.jpg" loading="lazy" alt="gorenychi" />
+        <img src="photo/obh/obh26.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
         <img src="photo/obh/obh27.jpg" loading="lazy" alt="obuhiv" />
@@ -433,7 +428,143 @@
         <img src="photo/obh/obh28.jpg" loading="lazy" alt="obuhiv" />
       </div>
       <div class="galleryImageObh galleryImage">
-        <img src="photo/obh/obh29.jpg" loading="lazy" alt="gorenychi" />
+        <img src="photo/obh/obh29.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+    </section>
+
+    <!-- RESTAURANT NEAR BUCHA -->
+    <section class="gallery restaurant">
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res1.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res2.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res3.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res4.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res5.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res6.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res7.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res8.jpg" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res9.png" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res10.png" loading="lazy" alt="restaurant" />
+      </div>
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/res/res11.png" loading="lazy" alt="restaurant" />
+      </div>
+    </section>
+
+    <!-- SEVERINOVKA -->
+    <section class="gallery severinovka">
+      <div class="galleryImageRes galleryImage">
+        <img src="photo/sev/sev1.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev2.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev3.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev4.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev5.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev6.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev7.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev8.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev9.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev10.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev11.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev12.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev13.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev14.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev15.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev16.jpg" loading="lazy" alt="severinovka" />
+      </div>
+      <div class="galleryImagesev galleryImage">
+        <img src="photo/sev/sev17.jpg" loading="lazy" alt="severinovka" />
+      </div>
+    </section>
+
+    <!-- TRIPILYA -->
+    <section class="gallery tripilya">
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri1.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri2.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri3.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri4.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri5.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri6.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri7.jpg" loading="lazy" alt="tripilya" />
+      </div>
+      <div class="galleryImageTri galleryImage">
+        <img src="photo/tri/tri8.jpg" loading="lazy" alt="tripilya" />
+      </div>
+    </section>
+
+    <!-- VASYLKIV -->
+    <section class="gallery vasylkiv">
+      <div class="galleryImageVas galleryImage">
+        <img src="photo/vas/vas1.jpg" loading="lazy" alt="vasylkiv" />
+      </div>
+      <div class="galleryImageVas galleryImage">
+        <img src="photo/vas/vas2.jpg" loading="lazy" alt="vasylkiv" />
+      </div>
+      <div class="galleryImageVas galleryImage">
+        <img src="photo/vas/vas3.jpg" loading="lazy" alt="vasylkiv" />
+      </div>
+      <div class="galleryImageVas galleryImage">
+        <img src="photo/vas/vas4.jpg" loading="lazy" alt="vasylkiv" />
       </div>
     </section>
 
