watch sass changes

--- a/works.html
+++ b/works.html
@@ -17,10 +17,23 @@
     <title>Terraflora.design</title>
   </head>
   <body>
-    <h1>My works</h1>
+
+<div class="container">
+    <div class="sectionHeader">
+<h1>My works</h1>
+    </div>
+
 
     <!--  BORYSPIL -->
-    <section class="gallery boryspil">
+
+<h2>A country house in Boryspil  </h2>
+<div class="object boryspil about">
+<div class="aboutText">
+
+<p>In this case our client's main wish was to create as much as possible matching decorative flowerbeds and a composition with a green lawn for games and children's sports.</p>
+</div>
+
+    <section class="gallery">
       <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor1.jpg" loading="lazy" alt="boryspil" />
       </div>
@@ -40,6 +53,7 @@
         <img src="photo/bor/bor6.jpg" loading="lazy" alt="boryspil" />
       </div>
     </section>
+</div>
 
     <!-- CANADIAN VILLAGE  -->
     <section class="gallery canagosadada">
@@ -567,6 +581,8 @@
         <img src="photo/vas/vas4.jpg" loading="lazy" alt="vasylkiv" />
       </div>
     </section>
+</div>
+</div>
 
     <!-- FOOTER -->
     <section class="footerCont">
@@ -620,8 +636,6 @@
     <!-- <section class="latestWorks">
     </section>
     <section class="seoFooter">  -->
-
-    <!-- //CTA? -->
 
     <script src="works.js"></script>
   </body>
