--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h1>About me</h1>
     </div>
 
-   <section class="about">
+   <section class="about" id="about">
 <div class="aboutPhotoCont">
   <img src="about.jpg" alt=""></div>
 <div class="aboutText">
@@ -121,56 +121,27 @@ Tatiana did an excellent job with this! We are sincerely grateful to her for her
       </div>
     </section>
   </main>
-  <div class="footerCont">
+
   <footer class="footer">
 <nav>
   <ul>
- <li> <a href="about.html">About</a></li>
+ <li> <a href="#about">About</a></li>
   <li><a href="works.html">Works</a></li>
-  <li><a href="services.html">Services</a></li>
   <li><a href="contacts">Contacts</a></li>
 </ul>
 </nav>
 
 <nav>
   <ul>
-    <!-- // To create and add links -->
-<li><a href="">Private plots</a></li>
-<li><a href="">Latest projects</a></li>
-<li><a href="">Commercial plots</a></li>
-<li><a href="">Plots in different climate zones</a></li>
-  </ul>
-</nav>
-
-<nav>
-  <ul>
-    <!-- // To create and add links -->
-<li><a href="">Terrasing</a></li>
-<li><a href="">Natural style</a></li>
-<li><a href="">Devision into zones</a></li>
-<li><a href="">Ponds and waterfalls</a></li>
-  </ul>
-</nav>
-
-<nav>
-  <ul>
-    <!-- // To create and add links -->
-
-<li><a href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/">LinkedIn</a></li>
-<li><a href="https://www.facebook.com/profile.php?id=100014740456848">Facebook</a></li>
-<li><a href="https://www.instagram.com/tetiana4425/">Instagram</a></li>
+<li><a href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/" target="_blank">LinkedIn</a></li>
+<li><a href="https://www.facebook.com/profile.php?id=100014740456848" target="_blank">Facebook</a></li>
+<li><a href="https://www.instagram.com/tetiana4425/" target="_blank">Instagram</a></li>
   </ul>
 </nav>
 
   </footer>
 </div>
-    <!-- <section class="latestWorks">
     </section>
-    <section class="seoFooter">  -->
-    </section>
-
-    <!-- //CTA? -->
-
  <script src="script.js"></script>
 </body>
 
