wip: forgot to commit last week

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li> -->
           <li class="menuItem animate animateUp"><a href="about.html">ABOUT</a></li>
           <li class="menuItem animate1 animateUp"><a href="works.html">WORKS</a></li>
-          <li class="menuItem animate2 animateDown"><a href="SERVICES">SERVICES</a></li>
+          <!-- <li class="menuItem animate2 animateDown"><a href="SERVICES">SERVICES</a></li> -->
           <li class="menuItem animate3 animateDown"><a href="contacts.html">CONTACTS</a></li>
         </div>
         </ul>
@@ -63,7 +63,7 @@ To realize it all in practice I work with a team of professional gardeners, dend
     </section>
 
   <div class="sectionHeader">
-<h1>Відгуки моїх клієнтів
+<h1>Reviews of my clients
 
 </h1>
     </div>
@@ -122,12 +122,14 @@ Tatiana did an excellent job with this! We are sincerely grateful to her for her
     </section>
   </main>
 
+<!-- FOOTER -->
+<section class="footerCont">
   <footer class="footer">
 <nav>
   <ul>
  <li> <a href="#about">About</a></li>
   <li><a href="works.html">Works</a></li>
-  <li><a href="contacts">Contacts</a></li>
+  <li><a href="contacts.html">Contacts</a></li>
 </ul>
 </nav>
 
@@ -141,7 +143,8 @@ Tatiana did an excellent job with this! We are sincerely grateful to her for her
 
   </footer>
 </div>
-    </section>
+</section>
+
  <script src="script.js"></script>
 </body>
 
