--- a/works.html
+++ b/works.html
@@ -8,8 +8,9 @@
     <meta name="keywords" content="landscape, design, gardening, garden, nature, green, plants, flowers" />
     <meta name="description" content="Landscape design" />
     <meta name="author" content="Tetiana Mykhailenko" />
+<link rel="stylesheet" type="text/css" href="style/works.css" />
     <link rel="stylesheet" type="text/css" href="style/index.css" />
-    <link rel="stylesheet" type="text/css" href="style/works.css" />
+
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap" rel="stylesheet" />
@@ -18,6 +19,17 @@
   </head>
   <body>
     <div class="container">
+
+      <nav class="simpleMenu">
+        <ul class="simpleMenuUl">
+
+          <!-- <li class="menuItem animate animateUp"><a href="about.html">ABOUT</a></li> -->
+          <li class="simpleMenuItem"><a href="index.html">HOME</a></li>
+          <!-- <li class="menuItem animate2 animateDown"><a href="SERVICES">SERVICES</a></li> -->
+          <li class="simpleMenuItem"><a href="contacts.html">CONTACTS</a></li>
+        </div>
+        </ul>
+        </nav>
       <h1 class="sectionHeader">My works</h1>
 
       <!--  BORYSPIL -->
@@ -50,7 +62,7 @@
       </div>
 
       <!-- CANADIAN VILLAGE  -->
-      <h2 class="aboutText">A plot in a cottage village "Canadian Village", Kyiv, Ukraine.</h2>
+      <h2 class="aboutText">A plot in a cottage village "Canadian Village", Kyiv region, Ukraine.</h2>
 
       <div class="object canadianVillageObject aboutGallery">
         <p class="aboutText">
@@ -93,7 +105,7 @@
       </div>
 
       <!-- GONENYCHI  -->
-      <h2 class="aboutText">An object in Gorenychy village, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">An object in Gorenychy village, Kyiv region, Ukraine</h2>
 
 
 
@@ -129,11 +141,12 @@
 
       <!-- GOSTOMEL  -->
 
-      <h2 class="aboutText">Relatively not a big object in Gostomel, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">Relatively not a big object in Gostomel, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">This plot already has its history - almost formed parterre zone and a small fruit garden behind the house, where a lawn needed to be added together with the lawn cover and mix borders, placing them in the view zone from the house and from the arbor.</p>
+
 
       <div class="object gostomelObject aboutGallery">
+    <p class="aboutText">This plot already has its history - almost formed parterre zone and a small fruit garden behind the house, where a lawn needed to be added together with the lawn cover and mix borders, placing them in the view zone from the house and from the arbor.</p>
         <section class="gallery gostomelGallery">
           <div class="galleryImageGos galleryImage">
             <img src="photo/gos/gos1.jpg" loading="lazy" alt="gostomel" />
@@ -178,11 +191,13 @@
       </div>
 
       <!-- GROBOVYCHI  -->
-      <h2 class="aboutText">An object in Grobovychi village, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">An object in Grobovychi village, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">some description about Grobovychi</p>
+
 
       <div class="object grobovychyObject aboutGallery">
+ <!-- <p class="aboutText">add some description about Grobovychi</p> -->
+
         <section class="gallery grobovychiGallery">
           <div class="galleryImageGro galleryImage">
             <img src="photo/gro/gro1.jpg" loading="lazy" alt="grobovychi" />
@@ -233,11 +248,12 @@
       </div>
 
       <!-- HOTYANIVKA  -->
-      <h2 class="aboutText">An object in Hotyanivka village, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">An object in Hotyanivka village, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">some description about Hotyanivka</p>
+
 
       <div class="object hotyanivkaObject aboutGallery">
+  <!-- <p class="aboutText">some description about Hotyanivka</p> -->
         <section class="gallery hotyanivkaGallery">
           <div class="galleryImageHot galleryImage">
             <img src="photo/hot/hot1.jpg" loading="lazy" alt="hotyanivka" />
@@ -282,14 +298,15 @@
       </div>
 
       <!-- IRPIN  -->
-      <h2 class="aboutText">An object near Irpin, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">An object near Irpin, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">
+
+      <div class="object irpinObject aboutGallery">
+  <p class="aboutText">
         Certain conditions were already set by the fact that the object was placed among pine trees. The paths’ trajectory already formed zones for lawns and the main task was to save the flexibility and the freedom of the space by not placing too many flower beds, shifting most of the decorative
         elements closer to the house.
       </p>
 
-      <div class="object irpinObject aboutGallery">
         <section class="gallery irpinGallery">
           <div class="galleryImageIrp galleryImage">
             <img src="photo/irp/irp1.jpg" loading="lazy" alt="irpin" />
@@ -325,11 +342,12 @@
       </div>
 
       <!-- IVANKOVICHI  -->
-      <h2 class="aboutText">A plot near Ivankovichy, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">A plot near Ivankovichy, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">One more area in a pine forest. In this case the task was to create design where everything would correspond to the style of the natural landscape. Eclecticism only in a few round spheres, matching the high-tech design of the house.</p>
 
       <div class="object ivankovichiObject aboutGallery">
+      <p class="aboutText">One more area in a pine forest. In this case the task was to create design where everything would correspond to the style of the natural landscape. Eclecticism only in a few round spheres, matching the high-tech design of the house.</p>
+
         <section class="gallery ivankovichiGallery">
           <div class="galleryImageIva galleryImage">
             <img src="photo/ivan/ivan1.jpg" loading="lazy" alt="ivankovichi" />
@@ -350,11 +368,12 @@
       </div>
 
       <!-- KRUKOVSHYNA  -->
-      <h2 class="aboutText">An object in Krukovshyna village, Kyiv, Ukraine</h2>
+      <h2 class="aboutText">An object in Krukovshyna village, Kyiv region, Ukraine</h2>
 
-      <p class="aboutText">some description about Krukovshyna</p>
+
 
       <div class="object krukovshynaObject aboutGallery">
+ <!-- <p class="aboutText">some description about Krukovshyna</p> -->
         <section class="gallery krukovshynaGallery">
           <div class="galleryImageKru galleryImage">
             <img src="photo/kru/kru1.jpg" loading="lazy" alt="krukovshyna" />
@@ -389,9 +408,11 @@
         <!-- NETHERLANDS  -->
         <h2 class="aboutText">A small object in the Netherlands</h2>
 
-        <p class="aboutText">some description about object in the Netherlands</p>
+
 
         <div class="object netherlandsObject aboutGallery">
+        <p class="aboutText">some description about object in the Netherlands</p>
+
           <section class="gallery netherlandsGallery">
             <div class="galleryImageNl galleryImage">
               <img src="photo/nl/nl1.jpg" loading="lazy" alt="netherlands" />
@@ -412,11 +433,13 @@
         </div>
 
         <!-- OBUHIV  -->
-        <h2 class="aboutText">An object in outskirts of Obuhiv, Kyiv, Ukraine</h2>
+        <h2 class="aboutText">An object in outskirts of Obuhiv, Kyiv region, Ukraine</h2>
 
-        <p class="aboutText">Outskirts of Obuhiv - a plot with a difficult relief and height differences. Here terracing is used, which enabled three differences in style, but in harmony with their zones, each of which has its own appeal.</p>
 
         <div class="object obuhivObject aboutGallery">
+<p class="aboutText">Outskirts of Obuhiv - a plot with a difficult relief and height differences. Here terracing is used, which enabled three differences in style, but in harmony with their zones, each of which has its own appeal.</p>
+
+
           <section class="gallery obuhivGallery">
             <div class="galleryImageObh galleryImage">
               <img src="photo/obh/obh1.jpg" loading="lazy" alt="obuhiv" />
@@ -511,9 +534,10 @@
         <!-- RESTAURANT NEAR BUCHA -->
         <h2 class="aboutText">Restaurant near Bucha, Kyiv region, Ukraine</h2>
 
-        <p class="aboutText">A restaurant with an open area, which was surrounded by pine trees. In the inner garden of the restaurant were planted plants which grow the best in half-shade and conifers in tubes.</p>
 
         <div class="object restaurantObject aboutGallery">
+ <p class="aboutText">A restaurant with an open area, which was surrounded by pine trees. In the inner garden of the restaurant were planted plants which grow the best in half-shade and conifers in tubes.</p>
+
           <section class="gallery restaurantGallery">
             <div class="galleryImageRes galleryImage">
               <img src="photo/res/res1.jpg" loading="lazy" alt="restaurant" />
@@ -554,12 +578,13 @@
         <!-- SEVERINOVKA -->
         <h2 class="aboutText">A plot in Severinovka village, Kyiv region, Ukraine</h2>
 
-        <p class="aboutText">
+
+
+        <div class="object severinovkaObject aboutGallery">
+      <p class="aboutText">
           A relief of which the plot consumes the zoning space. The ground area has a regular style (there are classic roses and wood). The remaining space, around the home and below, in which the corners are arranged to relax in sollitude, arranged in a natural style with bushes and a colorful
           tumult.
         </p>
-
-        <div class="object severinovkaObject aboutGallery">
           <section class="gallery severinovkaGallery">
             <div class="galleryImageRes galleryImage">
               <img src="photo/sev/sev1.jpg" loading="lazy" alt="severinovka" />
@@ -618,11 +643,13 @@
         <!-- TRIPILYA -->
         <h2 class="aboutText">Creating design for an area near a country house in Trypilya, Kyiv region, Ukraine.</h2>
 
-        <p class="aboutText">
-          Trypilya is a remarkable corner, where there is a wooden country house with a also a wooden pavilion located at the holts foot. Of course, a natural style, "without limits" in the choice of plants and perennials, and of course, a pond, in which all this beauty reflects...
-        </p>
+
 
         <div class="object severinovkaObject aboutGallery">
+
+   <p class="aboutText">
+          Trypilya is a remarkable corner, where there is a wooden country house with a also a wooden pavilion located at the holts foot. Of course, a natural style, "without limits" in the choice of plants and perennials, and of course, a pond, in which all this beauty reflects...
+        </p>
           <section class="gallery tripilya">
             <div class="galleryImageTri galleryImage">
               <img src="photo/tri/tri1.jpg" loading="lazy" alt="tripilya" />
@@ -652,11 +679,10 @@
         </div>
 
         <!-- VASYLKIV -->
-        <h2 class="aboutText">A small object in the Netherlands</h2>
-
-        <p class="aboutText">An object in Vasylkiv village, Kyiv region, Ukraine.</p>
+        <h2 class="aboutText">An object in Vasylkiv village, Kyiv region, Ukraine</h2>
 
         <div class="object vasylkivObject aboutGallery">
+        <!-- <p class="aboutText">An object in Vasylkiv village, Kyiv region, Ukraine.</p> -->
           <section class="gallery vasylkivGallery">
             <div class="galleryImageVas galleryImage">
               <img src="photo/vas/vas1.jpg" loading="lazy" alt="vasylkiv" />
@@ -676,57 +702,27 @@
     </div>
 
     <!-- FOOTER -->
-    <section class="footerCont">
-      <footer class="footer">
-        <nav>
-          <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="works.html">Works</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contacts">Contacts</a></li>
-          </ul>
-        </nav>
+<section class="footerCont" >
+  <footer class="footer" id="footerContWorks">
+<nav>
+  <ul>
+ <li> <a href="index.html">About</a></li>
+  <li><a href="works.html">Works</a></li>
+  <li><a href="contacts.html">Contacts</a></li>
+</ul>
+</nav>
 
-        <nav>
-          <ul>
-            <!-- // To create and add links -->
-            <li><a href="">Private plots</a></li>
-            <li><a href="">Latest projects</a></li>
-            <li><a href="">Commercial plots</a></li>
-            <li><a href="">Plots in different climate zones</a></li>
-          </ul>
-        </nav>
+<nav>
+  <ul>
+<li><a href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/" target="_blank">LinkedIn</a></li>
+<li><a href="https://www.facebook.com/profile.php?id=100014740456848" target="_blank">Facebook</a></li>
+<li><a href="https://www.instagram.com/tetiana4425/" target="_blank">Instagram</a></li>
+  </ul>
+</nav>
 
-        <nav>
-          <ul>
-            <!-- // To create and add links -->
-            <li><a href="">Terrasing</a></li>
-            <li><a href="">Natural style</a></li>
-            <li><a href="">Devision into zones</a></li>
-            <li><a href="">Ponds and waterfalls</a></li>
-          </ul>
-        </nav>
-
-        <nav>
-          <ul>
-            <!-- // To create and add links -->
-
-            <li>
-              <a href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/">LinkedIn</a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/profile.php?id=100014740456848">Facebook</a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/tetiana4425/">Instagram</a>
-            </li>
-          </ul>
-        </nav>
-      </footer>
-    </section>
-    <!-- <section class="latestWorks">
-    </section>
-    <section class="seoFooter">  -->
+  </footer>
+</div>
+</section>
 
     <script src="works.js"></script>
   </body>
