--- a/works.html
+++ b/works.html
@@ -364,6 +364,18 @@
           <div class="galleryImageIva galleryImage">
             <img src="photo/ivan/ivan5.jpg" loading="lazy" alt="ivankovichi" />
           </div>
+          <div class="galleryImageIva galleryImage">
+            <img src="photo/ivan/ivan6.jpg" loading="lazy" alt="ivankovichi" />
+          </div>
+          <div class="galleryImageIva galleryImage">
+            <img src="photo/ivan/ivan7.jpg" loading="lazy" alt="ivankovichi" />
+          </div>
+          <div class="galleryImageIva galleryImage">
+            <img src="photo/ivan/ivan8.jpg" loading="lazy" alt="ivankovichi" />
+          </div>
+          <div class="galleryImageIva galleryImage">
+            <img src="photo/ivan/ivan9.jpg" loading="lazy" alt="ivankovichi" />
+          </div>
         </section>
       </div>
 
